# bussola-etl-prisional

./: .gitignore  .isort.cfg  .pylint.ini  CHANGELOG.md  LICENSE.md  Makefile  README.md  mkdocs.yml  pyproject.toml  scent.py
bussola_etl_seap/: __init__.py  __main__.py  bussola_etl_seap.py  cli.py  utils.py
bussola_etl_seap/tests/: test_etl.py
data/input/: example.xlsx
tests/: conftest.py  test_cli.py
